fix align for bottom picto in farm histo

--- a/assets/scss/farm.scss
+++ b/assets/scss/farm.scss
@@ -154,7 +154,7 @@ section {
   }
 
   .row-low {
-    align-items: baseline;
+    flex-direction: row;
   }
 }
 
